added a link to my blog

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			using javascript to move things around the old fashioned way.</p>
 			<p>Supports: Firefox, Chrome and IE9+</p>
 			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
+			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</footer>
 		</header>
 		<div id='gallery'>	
 		</div>
