fixed html unclosed tags in demo page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 	<div id='wrap'>
-		<header>
+		<div class='main'>
 			<h1>Photobox <small>v1.02</small></h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
@@ -36,8 +36,8 @@
 			using javascript to move things around the old fashioned way.</p>
 			<p>Supports: Firefox, Chrome and IE9+</p>
 			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
-			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</footer>
-		</header>
+			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</a></footer>
+		</div>
 		<div id='gallery'>	
 		</div>
 	</div>
