#bug - image position
changed pageY to clientY.
the problem was changing the position on mouse move while the page was
scrolled down, so using pageY was incorrect.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 /*
- * Photobox v.1
+ * Photobox v 1.03
  *
  * Copyright 2012, Yair Even Or
  * https://dropthebit.com
@@ -29,7 +29,7 @@
 <body>
 	<div id='wrap'>
 		<div class='main'>
-			<h1>Photobox <small>v1.02</small></h1>
+			<h1>Photobox <small>v1.03</small></h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
 			The goal was to great an image gallery script that utilizes GPU rending instead is the 90% scripts out there which are 
