--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 /*
- * Photobox v 1.03
+ * Photobox
  *
  * Copyright 2012, Yair Even Or
  * https://dropthebit.com
@@ -24,7 +24,7 @@
 	<!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-ie6.min.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src='photobox/photobox.min.js'></script>
+	<script src='photobox/photobox.js'></script>
 </head>
 <body>
 	<div id='wrap'>
