added IE8 support + bug fixes and enhancements
- Added support for IE8
- fixed sever display bugs and enchanced transitions performance
- removed the Arrow.png image, now uses a pure font solution
- refactored the caption thumbnails generator function

minor other refactoring

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="photobox/photobox.css">
-	<!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-ie6.min.css"><![endif]-->
+	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src='photobox/photobox.js'></script>
@@ -29,17 +29,16 @@
 <body>
 	<div id='wrap'>
 		<div class='main'>
-			<h1>Photobox <small>v1.03</small></h1>
+			<h1>Photobox</h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
 			The goal was to great an image gallery script that utilizes GPU rending instead is the 90% scripts out there which are 
 			using javascript to move things around the old fashioned way.</p>
-			<p>Supports: Firefox, Chrome and IE9+</p>
+			<p>Supports: Firefox, Chrome and IE8+</p>
 			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
 			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</a></footer>
 		</div>
-		<div id='gallery'>	
-		</div>
+		<div id='gallery'></div>
 	</div>
 	<script src='main.js'></script>
 	<script type="text/rocketscript">
