--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<h1>Photobox</h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
-			The goal was to great an image gallery script that utilizes GPU rending instead is the 90% scripts out there which are 
-			using javascript to move things around the old fashioned way.</p>
+			The goal was to create an image gallery script that uses GPU rendering to move things around, instead of the old
+			fashioned javascript way (e.g. most other scripts in existence).</p>
 			<p>Supports: Firefox, Chrome and IE8+</p>
 			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
 			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</a></footer>
