updated to version 1.5

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src='photobox/photobox.min.js'></script>
+	<script src='photobox/photobox.js'></script>
 </head>
 <body>
 	<div id='wrap'>
