updatd to version 1.6.0
- added history hash support
- added optional callback when image has been loaded
- code refactoring
- fixed broken counter from version 1.5

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 			<h1>Photobox</h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
-			The goal was to great an image gallery script that utilizes GPU rending instead is the 90% scripts out there which are 
-			using javascript to move things around the old fashioned way.</p>
-			<p>Supports: Firefox, Chrome and IE8+</p>
+			The goal is to create an image gallery script that utilizes GPU rending, which can be completely controlled from a CSS file, So you can practicly change anything you want here just by playing around with the CSS.</p>
+			<p>Supports: <strong>Firefox</strong>, <strong>Chrome</strong> and <strong>IE8+</strong></p>
+			<p>(This plugin has <u>nothing</u> to do with Flickr)</p>
 			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
 			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</a></footer>
 		</div>
-		<div id='gallery'></div>
+		<ul id='gallery'></ul>
 	</div>
 	<script src='main.js'></script>
 	<script type="text/rocketscript">
