--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 	<meta name="description" content="A lightweight CSS3 image gallery that is pretty to look and and easy to use">
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="photobox/photobox.css">
 	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src='photobox/photobox.js'></script>
 </head>
 <body>
