--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<meta name="description" content="A lightweight CSS3 image gallery that is pretty to look and and easy to use">
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="photobox/photobox.css">
 	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
@@ -31,12 +30,12 @@
 		<div class='main'>
 			<h1>Photobox</h1>
 			<h2>CSS3 image gallery jQuery plugin</h2>
-			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions. 
-			The goal is to create an image gallery script that utilizes GPU rending, which can be completely controlled from a CSS file, So you can practicly change anything you want here just by playing around with the CSS.</p>
+			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions, 
+			utilizes GPU rending, which can be completely controlled and themed directly from the CSS.</p>
 			<p>Supports: <strong>Firefox</strong>, <strong>Chrome</strong> and <strong>IE8+</strong></p>
 			<p>(This plugin has <u>nothing</u> to do with Flickr)</p>
-			<a href='https://github.com/yairEO/photobox' class='btn btn-primary btn-large'>Github project page</a>
-			<footer>By Yair Even Or 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>dropthebit.com</a></footer>
+			<a href='https://github.com/yairEO/photobox' class='btn'>Github project page</a>
+			<footer>By Yair Even Or <span class='copy'>&copy;</span> 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>Dropthebit.com</a></footer>
 		</div>
 		<ul id='gallery'></ul>
 	</div>
