- Added a much better experience for small screens - Added swipe support for touch-enabled devices:   - swipe left / right change image   - swipe up / down will trigger the (bottom) thumbnail stripe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src='photobox/photobox.js'></script>
+	<script src='photobox/photobox.min.js'></script>
 </head>
 <body>
 	<div id='wrap'>
@@ -40,7 +40,7 @@
 		<ul id='gallery'></ul>
 	</div>
 	<script src='main.js'></script>
-	<script type="text/rocketscript">
+	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-26520680-1']);
 		_gaq.push(['_trackPageview']);
