--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<link rel="stylesheet" href="photobox/photobox.css">
 	<!--[if lt IE 9]><link rel="stylesheet" href="photobox/photobox.ie.css"><![endif]-->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src='photobox/photobox.js'></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src='photobox/jquery.photobox.js'></script>
 </head>
 <body>
 	<div id='wrap'>
