added an button to toggle the thumbnails in full-view mode

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
 			<h2>CSS3 image gallery jQuery plugin</h2>
 			<p>A lightweight image gallery modal window script which uses only CSS3 for silky-smooth animations and transitions, 
 			utilizes GPU rending, which can be completely controlled and themed directly from the CSS.</p>
+			<ul>
+				<li>Lightweight! <code>jquery.photobox.js</code> is only 5kb (gziped &amp; minified)</li>
+				<li>Hardware accelerated, CSS3 transitions and animations</li>
+				<li>Mobile friendly</li>
+				<li>Support videos via iframe embedding</li>
+				<li>Stunning UI and user-friendly UX</li>
+				<li>Images &amp; videos can be zoomed using mousewheel</li>
+				<li>Thumbnails can be zoomed using mousewheel</li>
+				<li>Keyboard & mouse navigation. Even using mousewheel left/right ;-)</li>
+				<li>Exposed UX control up to 99%. No need to mess with the source code</li>
+				<li>Observes DOM changes (if images were added/removed)</li>
+				<li>Event-delegation on all thumbnails events (obviously...)</li>
+				<li>HTML5 History support: update location with the currently viewed image</li>
+				<li>No images at all! The only image is a pre-loader animation for old IE.</li>
+				<li>Browsers support: IE8+ (graceful degradation), Modern browsers</li>
+				<li>And more...</li>
+			</ul>
 			<p>Supports: <strong>Firefox</strong>, <strong>Chrome</strong> and <strong>IE8+</strong></p>
 			<p>(This plugin has <u>nothing</u> to do with Flickr)</p>
 			<a href='https://github.com/yairEO/photobox' class='btn'>Github project page</a>
