--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</div>
 		<ul id='gallery'></ul>
 	</div>
-	<script src='main.js'></script>
+	<script src='demo.js'></script>
 	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-26520680-1']);
