- added "rotation" feature (fix #119) - some code refactoring - changed demo jquery version to 3.1.0

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="photobox/photobox.css">
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src='photobox/jquery.photobox.js'></script>
 </head>
 <body>
@@ -49,7 +49,7 @@
 			<p>Supports: <strong>Firefox</strong>, <strong>Chrome</strong> and <strong>IE8+</strong></p>
 			<p>(This plugin has <u>nothing</u> to do with Flickr)</p>
 			<a href='https://github.com/yairEO/photobox' class='btn'>Github project page</a>
-			<footer>By Yair Even Or <span class='copy'>&copy;</span> 2012 <a href='http://dropthebit.com/500/photobox-css3-image-gallery-jquery-plugin/'>Dropthebit.com</a></footer>
+			<footer>By Yair Even Or <span class='copy'>&copy;</span> 2012</footer>
 		</div>
 		<ul id='gallery'></ul>
 	</div>
