re-ordering files in the project

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <!--
 /*
  * Photobox
- *
  * Copyright 2012, Yair Even Or
- * https://dropthebit.com
- *
+ * https://github.com/yairEO/photobox
  */
 -->
 <html lang="en">
@@ -16,7 +14,7 @@
 	<meta name="description" content="A lightweight CSS3 image gallery that is pretty to look and and easy to use">
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="demo/styles.css">
 	<link rel="stylesheet" href="photobox/photobox.css">
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -53,7 +51,7 @@
 		</div>
 		<ul id='gallery'></ul>
 	</div>
-	<script src='demo.js'></script>
+	<script src='demo/demo.js'></script>
 	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-26520680-1']);
